# tauri-daw

./: package.json  pnpm-lock.yaml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: io.rs  main.rs
src/components/: Dial.tsx
src/util/: geometry.ts  unit.ts
